# name: TestCohortQuery.test_basic_query
  '
  
  SELECT person_id
  FROM
    (SELECT pdi.person_id as person_id,
            countIf(timestamp > now() - INTERVAL 2 day
                    AND timestamp < now()
                    AND event = '$pageview') AS performed_event_condition_level_level_level_0,
            countIf(timestamp > now() - INTERVAL 2 week
                    AND timestamp < now()
                    AND event = '$pageview') AS performed_event_condition_level_level_level_1,
            if(minIf(timestamp, ((replaceRegexpAll(JSONExtractRaw(properties, '$current_url'), '^"|"$', '') = 'https://posthog.com/feedback/123'
                                  AND event = '$autocapture'))) >= now() - INTERVAL 2 week
               AND minIf(timestamp, ((replaceRegexpAll(JSONExtractRaw(properties, '$current_url'), '^"|"$', '') = 'https://posthog.com/feedback/123'
                                      AND event = '$autocapture'))) < now(), 1, 0) as first_time_condition_level_level_level_0
     FROM events e
     INNER JOIN
       (SELECT distinct_id,
               argMax(person_id, version) as person_id
        FROM person_distinct_id2
        WHERE team_id = 2
        GROUP BY distinct_id
        HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
     WHERE team_id = 2
       AND event IN ['$pageview', '$pageview', '$autocapture']
     GROUP BY person_id) behavior_query
  INNER JOIN
    (SELECT id
     FROM person
     WHERE team_id = 2
     GROUP BY id
     HAVING max(is_deleted) = 0
     AND ((has(['test@posthog.com'], replaceRegexpAll(JSONExtractRaw(argMax(person.properties, _timestamp), 'email'), '^"|"$', ''))))) person ON person.id = behavior_query.person_id
  WHERE 1 = 1
    AND (((performed_event_condition_level_level_level_0 > 0
           OR performed_event_condition_level_level_level_1 > 0)
          AND (first_time_condition_level_level_level_0 = 1)))
  '
---
# name: TestCohortQuery.test_person_properties_with_pushdowns
  '
  
  SELECT person_id
  FROM
    (SELECT pdi.person_id as person_id,
            countIf(timestamp > now() - INTERVAL 2 day
                    AND timestamp < now()
                    AND event = '$pageview') AS performed_event_condition_level_level_level_0,
            countIf(timestamp > now() - INTERVAL 2 week
                    AND timestamp < now()
                    AND event = '$pageview') AS performed_event_condition_level_level_level_1,
            if(minIf(timestamp, ((replaceRegexpAll(JSONExtractRaw(properties, '$current_url'), '^"|"$', '') = 'https://posthog.com/feedback/123'
                                  AND event = '$autocapture'))) >= now() - INTERVAL 2 week
               AND minIf(timestamp, ((replaceRegexpAll(JSONExtractRaw(properties, '$current_url'), '^"|"$', '') = 'https://posthog.com/feedback/123'
                                      AND event = '$autocapture'))) < now(), 1, 0) as first_time_condition_level_level_level_0
     FROM events e
     INNER JOIN
       (SELECT distinct_id,
               argMax(person_id, version) as person_id
        FROM person_distinct_id2
        WHERE team_id = 2
        GROUP BY distinct_id
        HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
     WHERE team_id = 2
       AND event IN ['$pageview', '$pageview', '$autocapture']
     GROUP BY person_id) behavior_query
  FULL OUTER JOIN
    (SELECT id,
            replaceRegexpAll(JSONExtractRaw(person_props, 'name'), '^"|"$', '')) as prop_interested
            // argMax(properties, _timestamp) as person_props
     FROM person
     WHERE team_id = 2
     GROUP BY id
     HAVING max(is_deleted) = 0
     AND ((has(['test@posthog.com'], replaceRegexpAll(JSONExtractRaw(argMax(person.properties, _timestamp), 'email'), '^"|"$', ''))))) person ON person.id = behavior_query.person_id
  WHERE 1 = 1
    AND (((performed_event_condition_level_level_level_0 > 0
           OR performed_event_condition_level_level_level_1 > 0
           OR has(['special'], replaceRegexpAll(JSONExtractRaw(person_props, 'name'), '^"|"$', '')))
          AND (first_time_condition_level_level_level_0 = 1)))
  '
---
# name: TestCohortQuery.test_person_props_only
  '
  
  SELECT id
  FROM person
  WHERE team_id = 2
  GROUP BY id
  HAVING max(is_deleted) = 0
  AND ((has(['test1@posthog.com'], replaceRegexpAll(JSONExtractRaw(argMax(person.properties, _timestamp), 'email'), '^"|"$', ''))
        OR has(['test2@posthog.com'], replaceRegexpAll(JSONExtractRaw(argMax(person.properties, _timestamp), 'email'), '^"|"$', '')))
       OR (has(['test3'], replaceRegexpAll(JSONExtractRaw(argMax(person.properties, _timestamp), 'name'), '^"|"$', ''))
           AND has(['test3@posthog.com'], replaceRegexpAll(JSONExtractRaw(argMax(person.properties, _timestamp), 'email'), '^"|"$', ''))))
  '
---
